# RustScheduleService

rust-new/: Cargo.toml  test.json
rust-new/src/: main.rs  model.rs  service.rs  task.rs
rust-new/src/model/: Assignment_Model.rs  Completion.rs  Course.rs  Label_Model.rs  Quiz_Model.rs  Reminder.rs  Settime.rs  User.rs  User_Course_Model.rs
rust-new/src/service/: db_service.rs  query_service.rs
rust-new/src/service/api_service/: reminder_service.rs
rust-new/src/service/db_service/: mutable_service.rs  query_service.rs
rust-new/src/task/: admin_task.rs  real_time_task.rs
